[package]
name = "impersonate"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
edition = "2018"

[[bin]]
name = "impersonate-weechat"
path = "bin/impersonate-weechat/main.rs"
required-features = ["structopt"]

[dependencies]
itertools = "0.9"
lazy_static = "1.4"
rand = "0.7.3"
regex = "1.3"
structopt = { version = "0.3.14", optional = true }
